# rust_remote_audio_transmission

rac/: Cargo.toml
rac/src/: main.rs
ras/: Cargo.toml
ras/src/: main.rs
