[package]
name = "ras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.17", features = ["derive"] }
clap_derive = { version = "4.4.7", features = ["debug"] }
cpal = { version = "0.15.2", features = ["jack"] }
ringbuf = "0.3.3"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
byte-strings = "0.3.1"
crossbeam = "0.8.4"
